--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="style" href="./styles/flexbox.css"/>
     <link rel="style" href="./styles/scroll.css"/>
     <link rel="style" href="./styles/style.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
